--- a/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列二：搭建前端项目.md
+++ b/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列二：搭建前端项目.md
@@ -1,1 +1,25 @@
 ## 从零开始手把手撸码搭建前后端分离应用系列二：搭建前端项目
+
+在前面的章节中，我们已经完成了项目基础环境的准备以及配置工作，那么，从这一章节开始，我们就进入前端项目的搭建工作；
+
+### 2.1节：利用Vite2创建项目
+
+	npm init @vitejs/app malo-seckill-ui
+	## 或
+	cnpm init @vitejs/app malo-seckill-ui
+	## 或
+	yarn init @vitejs/app malo-seckill-ui
+
+创建项目有以上三种方式，根据自己的习惯任选其一即可；本文采用npm方式创建项目。
+
+### 2.2节：启动项目
+
+项目创建完成后，我们就可以安装依赖并启动项目了，如下：
+
+	## 安装依赖
+	npm install
+	
+	## 启动项目
+	npm run dev
+
+	
