--- a/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列三：前端路由封装.md
+++ b/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列三：前端路由封装.md
@@ -110,7 +110,7 @@ Welcome.vue文件代码如下：
 	                name:'welcome',
 	                path:'/welcome',
 	                meta:{
-	                    title:'登陆'
+	                    title:'欢迎'
 	                },
 	                component:Welcome
 	            }
