新增样式描述

--- a/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列五：登陆页面设计.md
+++ b/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列五：登陆页面设计.md
@@ -119,7 +119,15 @@ export default {
     column-reverse 显示为列。但方向和column属性值是反的
   */
   justify-content: center;/*属性决定了主轴方向上子项的对齐和分布方式*/
-  align-items: center;/*每一行中的子元素上下对齐方式*/
+  /*补充
+    flex-start ： 子项都去起始位置对齐。
+    flex-end ： 子项都去结束位置对齐。
+    center ： 子项都去中心位置对齐。
+    space-between : 表现为两端对齐。between是中间的意思，意思是多余的空白间距只在元素中间区域分配。
+    space-around : around是环绕的意思，意思是每个flex子项两侧都环绕互不干扰的等宽的空白间距，最终视觉上边缘两侧的空白只有中间空白宽度一半。
+    space-evenly : evenly是匀称、平等的意思。也就是视觉上，每个flex子项两侧空白间距完全相等。
+   */
+  align-items: center;/*每一行中的子元素上下对齐方式 flex-start:顶部对齐 center:居中对齐 flex-end:底部对齐*/
   background-color: #f9fcff;
   width: 100vw;
   height: 100vh;
@@ -131,11 +139,11 @@ export default {
     box-shadow: 0px 0px 10px 3px #c7c9cb4d;/*用于在元素的框架上添加阴影效果*/
     /*
     补充：
-      normal 默认。设置合理的行间距。
-      number 设置数字，此数字会与当前的字体尺寸相乘来设置行间距。
-      length 设置固定的行间距。
-      %        基于当前字体尺寸的百分比行间距。
-      inherit  规定应该从父元素继承 line-height 属性的值
+      normal	默认。设置合理的行间距。
+      number	设置数字，此数字会与当前的字体尺寸相乘来设置行间距。
+      length	设置固定的行间距。
+      %	      基于当前字体尺寸的百分比行间距。
+      inherit	规定应该从父元素继承 line-height 属性的值
     */
     .login-title {
       font-size: 50px;
@@ -154,3 +162,91 @@ export default {
 运行项目后，访问：http://localhost:8081/#/login 
 
 ![05-001](./images/05-001.png)
+
+为了对请求进行统一管理，我们将程序进行简单的优化，在src目录下，新增api目录，并创建index.js
+
+```javascript
+/**
+ * API管理
+ */
+import request from './../utils/request'
+
+export default{
+    login(param) {
+        return request({
+            url:'/demo',
+            data:param
+        })
+    }
+}
+```
+
+在main.js中引入api
+
+```javascript
+import { createApp } from 'vue'
+import App from './App.vue'
+// 引入路由文件
+import router from './router'
+import ElementPlus from 'element-plus'
+import 'element-plus/dist/index.css'
+import request from './utils/request'
+import api from './api/index'
+
+const app = createApp(App)
+app.config.globalProperties.$request = request;
+// 引入api
+app.config.globalProperties.$api = api;
+
+app.use(ElementPlus)
+// 加载路由信息
+app.use(router)
+app.mount('#app')
+```
+
+最终，登陆代码调整如下：
+
+```javascript
+<script>
+export default {
+  name: 'login',
+  data() {
+    return {
+      user: {
+        userCode: '',
+        userPwd: ''
+      },
+      rules: {
+        userCode: [
+          {
+            required: true,
+            message: "请输入用户名",
+            trigger: "blur"
+          }
+        ],
+        userPwd: [
+          {
+            required: true,
+            message: "请输入密码",
+            trigger: "blur"
+          }
+        ]
+      }
+    }
+  },
+  methods: {
+    login() {
+      this.$refs.loginForm.validate((valid) => {
+        if (valid) {
+          // 登陆方法通过api进行管理
+          this.$api.login(this.user).then((res) => {
+            console.info("登陆成功。。。。。。")
+            this.$router.push("/welcome")
+          })
+        }
+      })
+    }
+  }
+}
+</script>
+```
