新增样式描述

--- a/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列五：登陆页面设计.md
+++ b/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列五：登陆页面设计.md
@@ -112,11 +112,17 @@ export default {
 .login-wrapper {
   display: flex;/*display: flex意思是弹性布局*/
   flex-direction: row;/*布局的排列方向 （主轴排列方向)*/
-  /*补充：
+  /*补充1：
     row 默认值，显示为行。方向为当前文档水平流方向，默认情况下是从左往右。
     row-reverse 显示为行。但方向和row属性值是反的，在水平方向上为从右往左。
     column 显示为列 方向为在垂直方向上从上到下
     column-reverse 显示为列。但方向和column属性值是反的
+  补充2:
+    1.默认情况下，在弹性盒子中的子元素的左右排列的。
+    2. 水平是主轴的时候：默认情况下，当宽高不写的时候，宽度由内容决定，高度由父容器决定。
+    3. 垂直是主轴的时候：默认情况下，当宽高不写的时候，宽度由父容器决定，高度由内容决定。
+    4. 当子项的总宽度大于父容器的时候，会自动收缩的（弹性的优先级是大于自身固定大小的）
+    5.当子项的内容已经达到了父容器最小宽高的时候，就会出现溢出的现象。
   */
   justify-content: center;/*属性决定了主轴方向上子项的对齐和分布方式*/
   /*补充
