OpenGauss数据库安装教程

--- a/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列一：项目规划.md
+++ b/从零开始手把手撸码搭建前后端分离应用系列/从零开始手把手撸码搭建前后端分离应用系列一：项目规划.md
@@ -98,3 +98,59 @@
 | Zipkin        | 2.12.5 | https://search.maven.org/remote_content?g=io.zipkin.java&a=zipkin-server&v=LATEST&c=exec |
 | Nacos         | 1.3.2  | https://github.com/alibaba/nacos/releases                    |
 | Sentinel      | 1.7.2  | https://github.com/alibaba/Sentinel/releases                 |
+
+### 1.6 安装NodeJS
+
+从下一章节开始，我们会进入前端项目的构建以及开发工作，在此之前，我们需要将准备工作做好，比如，NodeJS的安装。
+
+NodeJS的安装比较简单，这里就不再赘述，我们安装完成后，查看下nodejs的版本与npm的版本。
+
+```javascript
+## 查看nodejs版本
+node -v
+
+## 查看npm版本
+npm -v
+```
+
+为了提升nodejs的速度，我们安装淘宝镜像源，输入 
+
+```javascript
+npm install nrm -g  
+
+nrm use taobao 
+
+npm config set registry http://registry.npm.taobao.org/
+
+## 查看NodeJS镜像
+npm get registry
+```
+
+等待运行即可
+
+### 1.7 安装Vue3脚手架
+
+如果安装使用过vue脚手架，或使用过vue2，请先卸载！卸载语句如下：输入:
+
+```javascript
+npm uninstall vue-cli -g 
+
+yarn global remove vue-cli 
+```
+
+回车运行完毕后，就是一个干净的脚手架工具了！
+
+安装Vue脚手架：
+
+```javascript
+npm install -g @vue/cli 回车运行即可。
+
+### 查看vue版本
+vue -V
+
+### 升级到最新版本
+npm install -g npm
+
+### 升级到指定版本npm install -g npm@版本号
+npm install -g npm@8.15.1
+```
